--- a/src/app/shared/modules/card/post-card/post-card/post-card.component.html
+++ b/src/app/shared/modules/card/post-card/post-card/post-card.component.html
@@ -4,5 +4,5 @@
   <img alt= "user image" class="card__img" src="{{imageUrl}}"/>
   <span class="card__text">{{userText}}</span>
   <span class="card__likes">{{userLikes}} Likes</span>
-  <a routerLink="{{userId}}/comments">Comments</a>
+  <a class="card__link" routerLink="{{userId}}/comments">Comments</a>
 </div>
