--- a/src/app/modules/posts/components/posts/posts.component.scss
+++ b/src/app/modules/posts/components/posts/posts.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   width: 100%;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
 
   &__post {
     margin: 10px;
