--- a/src/app/shared/modules/card/comments-card/comments-card/comments-card.component.scss
+++ b/src/app/shared/modules/card/comments-card/comments-card/comments-card.component.scss
@@ -1,5 +1,7 @@
 .card {
+  width: 300px;
   border: 1px solid black;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
