--- a/src/app/shared/modules/card/post-card/post-card/post-card.component.scss
+++ b/src/app/shared/modules/card/post-card/post-card/post-card.component.scss
@@ -1,5 +1,7 @@
 .card {
+  width: 300px;
   border: 1px solid black;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -7,5 +9,8 @@
 
   &__img {
     max-width: 150px;
+  }
+  &__link {
+    color: #000;
   }
 }
